--- a/src/style.css
+++ b/src/style.css
@@ -262,7 +262,7 @@ html {
 }
 
 .home-content {
-  padding: 9rem 0 2rem !important;
+  padding: 12rem 2rem !important;
   color: whitesmoke;
   text-align: left;
 }
