--- a/src/style.css
+++ b/src/style.css
@@ -368,7 +368,7 @@ html {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #010124;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -376,13 +376,13 @@ html {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #010124;
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: #010124;
+  box-shadow: 0 0 5px white;
+  text-shadow: 0 0 2px white;
 }
 
 .social-icons {
@@ -392,7 +392,7 @@ html {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #010124 !important;
 }
 
 /* --------- */
