--- a/src/style.css
+++ b/src/style.css
@@ -399,7 +399,7 @@ html {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: #010124a8;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
