--- a/src/style.css
+++ b/src/style.css
@@ -454,7 +454,8 @@ html {
 }
 
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+  box-shadow: 0 4px 5px 3px #010124 !important;
+  border-radius: 16px !important;
   color: white !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
@@ -464,7 +465,7 @@ html {
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.082)  !important;
 }
 
 .blog-card {
@@ -512,14 +513,14 @@ html {
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color: #010124 !important;
+  border-color: #fff !important;
 }
 
 .btn-primary:hover {
-  color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  color: #010124 !important;
+  background-color: #fff !important;
+  border-color: #010124 !important;
 }
 .btn:focus {
   outline: none !important;
