--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ html {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: #010124;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -70,9 +70,9 @@ html {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #212038d8 !important;
+  background-color: #01012485 !important;
   transition: all 0.3s ease-out 0s !important;
-  box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
+  box-shadow: 0px 10px 10px 0px #0101243f !important;
   backdrop-filter: blur(15px) !important;
 }
 
@@ -92,7 +92,7 @@ html {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: white !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -139,7 +139,7 @@ html {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #181a27 !important;
+    background-color: #010124 !important;
   }
   .navbar-nav .nav-item a::after {
     display: none !important;
